# real-time-stocks-feed

./: README.md  docker-compose.yml  pyproject.toml
service-feed/: README.md  goose.sh  pyproject.toml
service-feed/migrations/: 1751131570000000000_trades.sql  20250721201735_init_trades_table.sql
