[project]
name = "real-time-stocks-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-sqlalchemy>=0.3.2",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
